--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "layouts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.2",
-    "express-handlebars": "^3.0.0",
-    "express-session": "^1.15.1",
-    "handlebars-helper-css": "^0.1.0",
-    "method-override": "^2.3.7",
-    "mysql": "^2.13.0"
-  }
+    "name": "layouts",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.17.1",
+        "cookie-parser": "^1.4.3",
+        "express": "^4.15.2",
+        "express-handlebars": "^3.0.0",
+        "express-session": "^1.15.1",
+        "handlebars-helper-css": "^0.1.0",
+        "method-override": "^2.3.7",
+        "mysql": "^2.13.0"
+    },
+    "engines": {
+        "node": "6.11.1"
+    }
 }
